<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Zac Sweers
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/general">

    <CheckBoxPreference
      android:defaultValue="true"
      android:key="smartlinking_global"
      android:summary="@string/pref_smart_linking_summary"
      android:title="@string/pref_smart_linking_title"
      />

    <Preference
      android:key="services"
      android:summary="@string/pref_services_summary"
      android:title="@string/pref_services"
      />

    <Preference
      android:key="clear_cache"
      android:summary="@string/pref_clear_cache_summary"
      android:title="@string/pref_clear_cache"
      />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/prefs_theme"
    >

    <CheckBoxPreference
      android:defaultValue="true"
      android:disableDependentsState="true"
      android:key="daynight_auto"
      android:title="Automatically set theme using DayNight"
      />

    <CheckBoxPreference
      android:defaultValue="false"
      android:dependency="daynight_auto"
      android:key="daynight_night"
      android:title="Enable dark theme."
      />

    <!-- Remove this option on < L -->
    <CheckBoxPreference
      android:defaultValue="false"
      android:key="theme_navigation_bar"
      android:title="Theme navigation bar in pager."
      />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/app_name">

    <Preference
      android:key="about"
      android:title="@string/about"
      />

    <Preference
      android:key="licenses"
      android:title="@string/licenses"
      />

    <CheckBoxPreference
      android:defaultValue="true"
      android:key="reports"
      android:summary="@string/pref_reports_summary"
      android:title="@string/pref_reports"
      />

  </PreferenceCategory>
</PreferenceScreen>
